# amman-bus-backend

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
accounts/: models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
busapp/: urls.py  views.py
busproject/: asgi.py  info.py  settings.py  urls.py  wsgi.py
home_page/: admin.py  models.py  views.py
home_page/migrations/: 0001_initial.py
qrcapp/: admin.py  apps.py  models.py  urls.py  views.py
qrcapp/migrations/: 0001_initial.py
qrcapp/templates/: home.html
smartTracking/: views.py
templates/: email_confirmation.html
templates/authentication/: index.html
tests/: test_amman_bus_backend.py
